--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <!-- PEGA AQUÍ EL CÓDIGO QUE TE DIO GOOGLE -->
+    <meta name="google-site-verification" content="aBcDeFgHiJkLmNoPqRsTuVwXyZ123456" />
+    
     <meta http-equiv="refresh" content="0; url=https://4wkfykg8252-live.yw.app">
-    <title>Redirecting...</title>
+    <title>Fatima Shop - Tienda Online</title>
+    <meta name="description" content="Fatima Shop - La mejor tienda online con los productos más exclusivos. Envíos rápidos y precios increíbles.">
 </head>
 <body>
-    <p>Redirecting to <a href="https://4wkfykg8252-live.yw.app">https://4wkfykg8252-live.yw.app</a></p>
+    <p>Redirigiendo a <a href="https://4wkfykg8252-live.yw.app">Fatima Shop - Tienda Principal</a></p>
     <script>
         window.location.href = "https://4wkfykg8252-live.yw.app";
     </script>
