--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <!-- PEGA AQUÍ EL CÓDIGO QUE TE DIO GOOGLE -->
-    <meta name="google-site-verification" content="aBcDeFgHiJkLmNoPqRsTuVwXyZ123456" />
+    <meta name=""google-site-verification=dVaIhM02ifiI0XjEdtWAcJLJrdHWAiedmmMSPgQDUUs content="aBcDeFgHiJkLmNoPqRsTuVwXyZ123456" />
     
     <meta http-equiv="refresh" content="0; url=https://4wkfykg8252-live.yw.app">
     <title>Fatima Shop - Tienda Online</title>
@@ -15,3 +15,4 @@
     </script>
 </body>
 </html>
+
